[GH-5] - Login endpoint (#6)
* feat: refactor for auth service

* feat: basic login

* feat: generate token

* feat: response jwt token
